--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
   <nav>
     <ul class="menu">
-      <li class="logo"><img class="logopag " src="./Logo/logo.png" alt="Logo da Sua Empresa"><a href="#"></a></li>
+      <li class="logo"><img class="logopag " src="./logo/logo.png" alt="Logo da Sua Empresa"><a href="#"></a></li>
       <li class="item"><a href="index.html">Home</a></li>
       <li class="item"><a href="carros.html">Catalago</a></li>
       <li class="item"><a href="anuncio.html">Orçamento</a></li>
