--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" type="text/css" href="custom.css">
   <script src="https://cdn.tailwindcss.com"></script>
   <script type="text/javascript" src="script.js"></script>
-  <title>Brsales</title>
-  <link rel="website icon" type="png" href="./fotos/logo.jpg">
+  <title>Marcos Refrigeração</title>
+  <link rel="website icon" type="png" href="./logo/logo.png">
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
   <script>
@@ -25,7 +25,6 @@
     var images = [
       "./Template/template1.jpg",
       "./Template/template2.jpg",
-      "./Template/template3.jpg",
       // Adicione mais URLs de imagens conforme necessário
     ];
 
@@ -51,7 +50,7 @@
       <li class="item"><a href="index.html">Home</a></li>
       <li class="item"><a href="carros.html">Catalago</a></li>
       <li class="item"><a href="anuncio.html">Orçamento</a></li>
-      <li class="item button secondary"><a href="#">Login</a></li>
+      <li class="item button secondary"><a href="index2.html">Login</a></li>
       <li class="toggle"><span class="bars"></span></li>
     </ul>
   </nav>
@@ -62,61 +61,53 @@
   <br>
   <div class="line-container">
     <hr class="styled-line">
-    <span class="line-label">Refrigeradores</span>
+    <span class="line-label">Frigobares</span>
   </div>
   <Br>
   <section class="home-classe">
     <article class="art-home">
       <img src="./fotoproduto/produto1.jpg" alt="Carro 1">
-      <h2>Supra</h2>
-      <p>2023/2023</p>
-      <p>Preço: R$ 459,000</p>
+      <h2>Frigobar 80 Litros 12/24v</h2>
+      <p>Preço:R$3.448,50</p>
       <a href="" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
     </article>
     <article class="art-home">
-      <img src="./fotoproduto/produto1.jpg" alt="Carro 2">
-      <h2>Freezer Horizontal 100L, Midea, 220V, Branco, CFA10B2</h2>
-      <p>https://www.amazon.com.br/Freezer-Horizontal-Midea-Branco-CFA10B2/dp/B09HSQCN29</p>
-      <p>Preço: R$ 1,584.99</p>
+      <img src="./fotoproduto/produto2.jpg" alt="Carro 2">
+      <h2>Frigobar 120 Litros 12/24v</h2>
+      <p>Preço:R$ 1,584.99</p>
       <a href="" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
     </article>
     <article class="art-home">
-      <img src="./fotoproduto/produto1.jpg" alt="Carro 3">
-      <h2>Golf Gti</h2>
-      <p>2023/2023</p>
-      <p>Preço: R$ 759,000</p>
+      <img src="./fotoproduto/produto3.jpg" alt="Carro 3">
+      <h2>Frigobar Duplex 88 Litros 12/24v</h2>
+      <p>Preço: R$3.790,50</p>
       <a href="" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
     </article>
   </section>
   <br>
   <div class="line-container">
     <hr class="styled-line">
-    <span class="line-label">Peças</span>
+    <span class="line-label">Refrigeradores</span>
   </div>
   <br>
   <section class="home-classe">
     <article class="art-home">
-      <img src="./fotoproduto/produto1.jpg" alt="peça 1" style="width: 100%;">
-      <h2>Turbina MasterPower</h2>
-      <p>.50/63</p>
-      <p>Preço:
-        R$2,000</p>
+      <img src="./fotoproduto/produto4.jpg" alt="peça 1" style="width: 100%;">
+      <h2>Refrigerador Duplex 260 Litros 12/24</h2>
+      <p>Preço: R$5.035,00</p>
       <a href="" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
     </article>
     <article class="art-home">
-      <img src="./fotoproduto/produto1.jpg" alt="Peça 2">
-      <h2>Turbina Spa Turbo</h2>
-      <p>.70/80</p>
-      <p>Preço:R$5,000</p>
+      <img src="./fotoproduto/produto5.jpg" alt="Peça 2">
+      <h2>Freezer 150 Litros Tampa Ilha</h2>
+      <p>Preço:R$3.059,00</p>
       <a href="" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
     </article>
 
     <article class="art-home">
-      <img src="./fotoproduto/produto1.jpg" alt="Peça 3">
-      <h2>FuelTech 550</h2>
-      <p>ECU</p>
-      <p>Nova</p>
-      <p>Preço: R$7,569</p>
+      <img src="./fotoproduto/produto6.jpg" alt="Peça 3">
+      <h2>Freezer 300 Litros Tampa Cega 12/24v</h2>
+      <p>Preço: R$5.510,00</p>
       <a href="" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
     </article>
   </section>
