--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     });
     // Array de URLs das imagens
     var images = [
-      "./Template/template1.jpg",
-      "./Template/template2.jpg",
+      "./template/template1.jpg",
+      "./template/template2.jpg",
       // Adicione mais URLs de imagens conforme necessário
     ];
 
@@ -55,7 +55,7 @@
     </ul>
   </nav>
   <div id="fototemplate">
-    <img src="./Template/template1.jpg" alt="Imagem 1" class="main-image" id="mainImage"
+    <img src="./template/template1.jpg" alt="Imagem 1" class="main-image" id="mainImage"
       onclick="openModal('./Template/template1.jpg')" style="width: 100%;height:180px;">
   </div>
   <br>
