--- a/index2.html
+++ b/index2.html
@@ -22,9 +22,9 @@
       });
     });
     // Array de URLs das imagens
-    var images = [
-      "./Template/template1.jpg",
-      "./Template/template2.jpg",
+ var images = [
+      "./template/template1.jpg",
+      "./template/template2.jpg",
       // Adicione mais URLs de imagens conforme necessário
     ];
 
