--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <li class="logo"><img class="logopag " src="./logo/logo.png" alt="Logo da Sua Empresa"><a href="#"></a></li>
       <li class="item"><a href="index.html">Home</a></li>
       <li class="item"><a href="carros.html">Catalago</a></li>
-      <li class="item"><a href="anuncio.html">Orçamento</a></li>
+      <li class="item"><a href="orcamento.html">Orçamento</a></li>
       <li class="item button secondary"><a href="index2.html">Login</a></li>
       <li class="toggle"><span class="bars"></span></li>
     </ul>
