--- a/index2.html
+++ b/index2.html
@@ -49,14 +49,14 @@
       <li class="logo"><img class="logopag " src="./logo/logo.png" alt="Logo da Sua Empresa"><a href="#"></a></li>
       <li class="item"><a href="index.html">Home</a></li>
       <li class="item"><a href="carros.html">Catalago</a></li>
-      <li class="item"><a href="anuncio.html">Orçamento</a></li>
+      <li class="item"><a href="orcamento.html">Orçamento</a></li>
       <li class="item"><a href="anuncio.html">Minha Conta</a></li>
       <li class="item button secondary"><a href="index.html">Sair</a></li>
       <li class="toggle"><span class="bars"></span></li>
     </ul>
   </nav>
   <div id="fototemplate">
-    <img src="./Template/template1.jpg" alt="Imagem 1" class="main-image" id="mainImage"
+    <img src="./template/template1.jpg" alt="Imagem 1" class="main-image" id="mainImage"
       onclick="openModal('./Template/template1.jpg')" style="width: 100%;height:250px;">
   </div>
   <br>
