--- a/orcamento.html
+++ b/orcamento.html
@@ -69,7 +69,7 @@
                 <input class="inputforms" type="text" name="valor" value="E-mail" id="campotext">
                 <br>
                 <label for="valor"></label>
-                <input class="inputforms" type="text" name="valor" value="Marca e Modelo do Equipameto" id="campotext"><br><br>
+                <input class="inputforms" type="text" name="valor" value="Marca e Modelo do Equipamento" id="campotext"><br><br>
                 <label>Descrição do Problema:</label>
                 <input  class="inputforms" type="text" name="adicionais" value="" style="height: 100px;">
                 <label for="fotos">Selecione as fotos:</label>
