--- a/Detalhes.html
+++ b/Detalhes.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="custom.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="text/javascript" src="script.js"></script>
-    <title>Brsales - Onde a Potência Encontra a Personalidade</title>
+    <title>Marcos Refrigeração</title>
     <script
     src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
@@ -25,14 +25,15 @@
 </head>
 <body>
     <nav>
-        <ul class="menu">
-            <li class="logo"><img class="logopag " src="./fotos/logonova.png" alt="Logo da Sua Empresa"><a href="#"></a></li>
-            <li class="item"><a href="index.html">Home</a></li>
-            <li class="item"><a href="anuncio.html">Anuncie seu Carro</a></li>
-            <li class="item"><a href="carros.html">Carros</a></li>
-            <li class="item button secondary"><a href="#">Login</a></li>
-            <li class="toggle"><span class="bars"></span></li>
-        </ul>
+    <ul class="menu">
+      <li class="logo"><img class="logopag " src="./logo/logo.png" alt="Logo da Sua Empresa"><a href="#"></a></li>
+      <li class="item"><a href="index.html">Home</a></li>
+      <li class="item"><a href="catalago.html">Catalago</a></li>
+      <li class="item"><a href="orcamento.html">Orçamento</a></li>
+      <li class="item"><a href="anuncio.html">Minha Conta</a></li>
+      <li class="item button secondary"><a href="index.html">Sair</a></li>
+      <li class="toggle"><span class="bars"></span></li>
+    </ul>
     </nav>
         <div class="container">
             <div class="campo campo-esquerda">
