--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
   <nav>
     <ul class="menu">
-      <li class="logo"><img class="logopag " src="./logo/logo.png" alt="Logo da Sua Empresa"><a href="#"></a></li>
+      <li class="logo"><img class="logopag " src="./logo/logo.png" href="index.html" alt="Logo da Sua Empresa"><a href="#"></a></li>
       <li class="item"><a href="index.html">Home</a></li>
       <li class="item"><a href="catalago.html">Catalago</a></li>
       <li class="item"><a href="orcamento.html">Orçamento</a></li>
@@ -61,7 +61,7 @@
   <br>
   <div class="line-container">
     <hr class="styled-line">
-    <span class="line-label">Frigobares</span>
+    <span class="line-label">FRIGOBARES</span>
   </div>
   <Br>
   <section class="home-classe">
@@ -87,7 +87,7 @@
   <br>
   <div class="line-container">
     <hr class="styled-line">
-    <span class="line-label">Refrigeradores</span>
+    <span class="line-label">REFRIGERADORES</span>
   </div>
   <br>
   <section class="home-classe">
