--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <article class="art-home">
       <img src="./fotoproduto/produto6.jpg" alt="Peça 3">
       <h2>Freezer 300 Litros Tampa Cega 12/24v</h2>
-      <p>Preço: R$5.510,00</p>
+      <p>Preço: R$5.teste,00</p>
       <a href="" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
     </article>
   </section>
