--- a/catalogo2.html
+++ b/catalogo2.html
@@ -61,7 +61,7 @@
       </form>
     <section class="car-list">
         <article class="car">
-            <img src="./carros/car1.jpg" alt="Carro 1">
+            <img src="./carros/car1.jpg" alt="Produto1">
             <!-- Foto do carro -->
             <h2>GM / Opala</h2>
             <!-- Marca/Modelo -->
