--- a/Detalhes.html
+++ b/Detalhes.html
@@ -46,8 +46,6 @@
                     <li>Stage 2</li>
                     <li>Turbina ZR .50/63</li>
                 </ul>
-
-
             </div>
             <div class="campo campo-direita">
                 <!-- Conteúdo do campo direita -->
@@ -56,12 +54,9 @@
                     <p>Nome:</p>
                     <p>Estado e Cidade:</p>
                     <p>Telefone:</p>
-                    <a href="link whatsapp" readonly="readonly" id="meuCampo">
+                    <a href="" class="botaocompra" style="font-size: 22px;display: inline-block;">COMPRAR</a>
                 </form>
             </div>
         </div>
-</body>
-</html>
-
 </body>
 </html>
