--- a/Detalhes.html
+++ b/Detalhes.html
@@ -37,15 +37,10 @@
     </nav>
         <div class="container">
             <div class="campo campo-esquerda">
-                <!-- Conteúdo do campo esquerda -->
-                <img class="carfoto"  src="./carros/car1.jpg">
-                <p>NISSAN / GTR SKYLINE R34</p><!--MARCA/MODELO /CONSULTA BANCO DE DADOS -->
-                <p>2000/2000</p><!-- ANO MODELO/FABRICAÇÃO /CONSULTA BANCO DE DADOS-->
-                <p>Quilometragem:</p> <!-- /CONSULTA BANCO DE DADOS-->
-                <ul class="configcarro">
-                    <li>Stage 2</li>
-                    <li>Turbina ZR .50/63</li>
-                </ul>
+                <img class="carfoto"  src="./fotoproduto/produto3.jpg">
+                <h2> Compacto e funcional</h2>
+                    <h6>Com medidas externas de 50 cm de largura, 55 cm de profundidade e 88 cm de altura, o Freezer 50 Litros é uma opção compacta que se adequa a espaços limitados.</h6>
+  
             </div>
             <div class="campo campo-direita">
                 <!-- Conteúdo do campo direita -->
@@ -54,7 +49,7 @@
                     <p>Nome:</p>
                     <p>Estado e Cidade:</p>
                     <p>Telefone:</p>
-                    <a href="" class="botaocompra" style="font-size: 22px;display: inline-block;">COMPRAR</a>
+                    <a href="" class="botaocompra" style="font-size: 22px;display: inline-block; background-color:green">COMPRAR</a>
                 </form>
             </div>
         </div>
