--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
   <nav>
     <ul class="menu">
-      <li class="logo"><img class="logopag " src="./logo/logo.png" href="index.html" alt="Logo da Sua Empresa"><a href="#"></a></li>
+      <li class="logo"><img class="logopag " src="./logo/logo.png" href="index.html" alt="Logo da Sua Empresa"><a href="index.html"></a></li>
       <li class="item"><a href="index.html">Home</a></li>
       <li class="item"><a href="catalago.html">Catalago</a></li>
       <li class="item"><a href="orcamento.html">Orçamento</a></li>
@@ -55,63 +55,128 @@
     </ul>
   </nav>
   <div id="fototemplate">
-    <img src="./template/template1.jpg" alt="Imagem 1" class="main-image" id="mainImage"
-      onclick="openModal('./Template/template1.jpg')">
+    <img src="./template/template1.jpg" alt="Imagem 1" class="main-image" id="mainImage" onclick="openModal('./Template/template1.jpg')">
   </div>
   <br>
   <div class="line-container">
-    <hr class="styled-line">
     <span class="line-label">FRIGOBARES</span>
   </div>
   <Br>
   <section class="home-classe">
-    <article class="art-home">
-      <img src="./fotoproduto/produto1.jpg" alt="Carro 1">
-      <h2>Frigobar 80 Litros 12/24v</h2>
-      <p>Preço:R$3.448,50</p>
-      <a href="" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
+    <article class="product">
+      <!-- Imagem -->
+      <img src="/fotoproduto/produto1.jpg" alt="frio01">
+      <!-- Titulo -->
+      <h2>Frigorbar 120L 12/24v</h2>
+      <!-- Valor -->
+      <p><b>R$ 3.505,50</b> no PIX</p>
+      <!-- Quantidade no Cartão-->
+      <p>6x de R$ 615,00 no cartão s/ juros</p><br>
+      <a href="Detalhes.html" class="botao">Mais Informações</a>
     </article>
-    <article class="art-home">
-      <img src="./fotoproduto/produto2.jpg" alt="Carro 2">
-      <h2>Frigobar 120 Litros 12/24v</h2>
-      <p>Preço:R$ 1,584.99</p>
-      <a href="" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
+
+    <article class="product">
+      <img src="/fotoproduto/produto2.jpg" alt="frio02">
+      <!-- Titulo -->
+      <h2>Frigorbar 80L 12/24v</h2>
+      <!-- Valor -->
+      <p><b>R$ 3.448,50</b> no PIX</p>
+      <!-- Quantidade no Cartão-->
+      <p>6x de R$ 605,00 no cartão s/ juros</p><br>
+      <a href="Detalhes.html" class="botao">Mais Informações</a>
     </article>
-    <article class="art-home">
-      <img src="./fotoproduto/produto3.jpg" alt="Carro 3">
-      <h2>Frigobar Duplex 88 Litros 12/24v</h2>
-      <p>Preço: R$3.790,50</p>
-      <a href="" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
+
+    <article class="product">
+      <img src="/fotoproduto/produto3.jpg" alt="frio03">
+      <!-- Titulo -->
+      <h2>Frigobar Duplex 88L 12/24v</h2>
+      <!-- Valor -->
+      <p><b>R$ 3.790,50</b> no PIX</p>
+      <!-- Quantidade no Cartão-->
+      <p>6x de R$ 665,00 no cartão s/ juros</p><br>
+      <a href="Detalhes.html" class="botao">Mais Informações</a>
     </article>
   </section>
   <br>
   <div class="line-container">
-    <hr class="styled-line">
+
     <span class="line-label">REFRIGERADORES</span>
   </div>
   <br>
-  <section class="home-classe">
-    <article class="art-home">
-      <img src="./fotoproduto/produto4.jpg" alt="peça 1" style="width: 100%;">
-      <h2>Refrigerador Duplex 260 Litros 12/24</h2>
-      <p>Preço: R$5.035,00</p>
-      <a href="" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
-    </article>
-    <article class="art-home">
-      <img src="./fotoproduto/produto5.jpg" alt="Peça 2">
-      <h2>Freezer 150 Litros Tampa Ilha</h2>
-      <p>Preço:R$3.059,00</p>
-      <a href="" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
+  <div class="home-classe">
+
+    <article class="product">
+      <img src="/fotoproduto/produto4.jpg" alt="frio04">
+      <!-- Titulo -->
+      <h2>Refrigerador Duplex 260L 12/24v</h2>
+      <!-- Valor -->
+      <p><b>R$ 5.035,50</b> no PIX</p>
+      <!-- Quantidade no Cartão-->
+      <p>6x de R$ 883,33 no cartão s/ juros</p><br>
+      <a href="Detalhes.html" class="botao">Mais Informações</a>
     </article>
 
-    <article class="art-home">
-      <img src="./fotoproduto/produto6.jpg" alt="Peça 3">
-      <h2>Freezer 300 Litros Tampa Cega 12/24v</h2>
-      <p>Preço: R$5.teste,00</p>
-      <a href="" class="botaohome" style="font-size: 11px;display: inline-block;">Mais Informações</a>
+    <article class="product">
+      <img src="/fotoproduto/produto5.jpg" alt="frio05">
+      <!-- Titulo -->
+      <h2>Caixa Térmica 90L</h2>
+      <!-- Valor -->
+      <p><b>R$ 893,00</b> no PIX</p>
+      <!-- Quantidade no Cartão-->
+      <p>6x de R$ 235,00 no cartão s/ juros</p><br>
+      <a href="Detalhes.html" class="botao">Mais Informações</a>
     </article>
-  </section>
+
+    <article class="product">
+      <img src="/fotoproduto/produto6.jpg" alt="frio06">
+      <!-- Titulo -->
+      <h2>Freezer 300 Litros com Tampa 12/2</h2>
+      <!-- Valor -->
+      <p><b>R$ 3.505,50</b> no PIX</p>
+      <!-- Quantidade no Cartão-->
+      <p>6x de R$ 615,00 no cartão s/ juros</p><br>
+      <a href="Detalhes.html" class="botao">Mais Informações</a>
+    </article>
+  </div>
   <br>
+  <!-- Rodape Final-->
+  <div class="campoRodape">
+    <div class="flex wrap space-between">
+      <div>
+        <!-- Campo 01-->
+        <h4 class="section-title">HISTORIA BREVE DA EMPRESA  </h4><br>
+        <div class="list-menu-default "> 
+          <p>
+            A empresa Marcos Refrigeração está<br>
+            atualmente no mercado 11 anos.<br>
+            Foi Fundada em 2012, pelo DR. Daniel e Verdi<br>
+            A Empresa conta com 6 pessoas atualmente e<br>
+            trabalhamos com toda linha Refrigeração e entre outros<br>
+            produtos relacionados a está area. 
+          </p>
+        </div>
+      </div>   
+
+      <!-- Campo 02-->
+      <div>
+        <div>
+          <h4>SELOS DE SEGURANÇA </h4>
+          <div> 
+            <div>
+              <a href="#"><p>- Selo Google</p></a>
+              <a href="#"><p>- ProconSC</p></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Campo 03-->
+      <div>
+        <h4>ENTRE EM CONTATO</h4> 
+        <p>- WhatsApp</p>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
