--- a/catalago.html
+++ b/catalago.html
@@ -75,7 +75,7 @@
     <section class="product-list">
       <article class="product">
         <!-- Imagem -->
-        <img src="/fotoproduto/produto1.jpg" alt="frio01">
+        <img src="./fotoproduto/produto1.jpg" alt="frio01">
         <!-- Titulo -->
         <h2>Frigorbar 120L 12/24v</h2>
         <!-- Valor -->
