--- a/catalago.html
+++ b/catalago.html
@@ -86,7 +86,7 @@
       </article>
 
       <article class="product">
-        <img src="/fotoproduto/produto2.jpg" alt="frio02">
+        <img src="./fotoproduto/produto2.jpg" alt="frio02">
         <!-- Titulo -->
         <h2>Frigorbar 80L 12/24v</h2>
         <!-- Valor -->
@@ -97,7 +97,7 @@
       </article>
 
       <article class="product">
-        <img src="/fotoproduto/produto3.jpg" alt="frio03">
+        <img src="./fotoproduto/produto3.jpg" alt="frio03">
         <!-- Titulo -->
         <h2>Frigobar Duplex 88L 12/24v</h2>
         <!-- Valor -->
@@ -108,7 +108,7 @@
       </article>
 
       <article class="product">
-        <img src="/fotoproduto/produto4.jpg" alt="frio04">
+        <img src="./fotoproduto/produto4.jpg" alt="frio04">
         <!-- Titulo -->
         <h2>Refrigerador Duplex 260L 12/24v</h2>
         <!-- Valor -->
@@ -119,7 +119,7 @@
       </article>
 
       <article class="product">
-        <img src="/fotoproduto/produto5.jpg" alt="frio05">
+        <img src="./fotoproduto/produto5.jpg" alt="frio05">
         <!-- Titulo -->
         <h2>Caixa Térmica 90L</h2>
         <!-- Valor -->
@@ -130,7 +130,7 @@
       </article>
 
       <article class="product">
-        <img src="/fotoproduto/produto6.jpg" alt="frio06">
+        <img src="./fotoproduto/produto6.jpg" alt="frio06">
         <!-- Titulo -->
         <h2>Freezer 300 Litros com Tampa 12/2</h2>
         <!-- Valor -->
