--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </article>
 
     <article class="product">
-      <img src="/fotoproduto/produto2.jpg" alt="frio02">
+      <img src="./fotoproduto/produto2.jpg" alt="frio02">
       <!-- Titulo -->
       <h2>Frigorbar 80L 12/24v</h2>
       <!-- Valor -->
@@ -87,7 +87,7 @@
     </article>
 
     <article class="product">
-      <img src="/fotoproduto/produto3.jpg" alt="frio03">
+      <img src="./fotoproduto/produto3.jpg" alt="frio03">
       <!-- Titulo -->
       <h2>Frigobar Duplex 88L 12/24v</h2>
       <!-- Valor -->
@@ -106,7 +106,7 @@
   <div class="home-classe">
 
     <article class="product">
-      <img src="/fotoproduto/produto4.jpg" alt="frio04">
+      <img src="./fotoproduto/produto4.jpg" alt="frio04">
       <!-- Titulo -->
       <h2>Refrigerador Duplex 260L 12/24v</h2>
       <!-- Valor -->
