--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <section class="home-classe">
     <article class="product">
       <!-- Imagem -->
-      <img src="/fotoproduto/produto1.jpg" alt="frio01">
+      <img src="./fotoproduto/produto1.jpg" alt="frio01">
       <!-- Titulo -->
       <h2>Frigorbar 120L 12/24v</h2>
       <!-- Valor -->
