--- a/index2.html
+++ b/index2.html
@@ -50,7 +50,7 @@
       <li class="item"><a href="index.html">Home</a></li>
       <li class="item"><a href="catalago.html">Catalago</a></li>
       <li class="item"><a href="orcamento.html">Orçamento</a></li>
-      <li class="item"><a href="anuncio.html">Minha Conta</a></li>
+      <li class="item"><a href="minhaconta.html">Minha Conta</a></li>
       <li class="item button secondary"><a href="index.html">Sair</a></li>
       <li class="toggle"><span class="bars"></span></li>
     </ul>
