--- a/cadastro.html
+++ b/cadastro.html
@@ -22,7 +22,7 @@
 <body>
     <div class="container">
         <h2>Casdastro</h2>
-        <form action="" method="post">
+        <form href="index2.html" method="post">
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" required>
 
@@ -42,7 +42,8 @@
             <input type="number" id="cep" name="cep"><br>
 
             <input type="submit" value="Cadastrar" onclick="copiarTexto()">
-            <a href="login.html">teste</a>
+            <a href="login.html">Voltar</a>
+            <button type="submit">Cadastrar Conta</button>
         </form>
     </div>
 </body>
