--- a/login.html
+++ b/login.html
@@ -9,17 +9,19 @@
 <body>
     <div class="container">
         <h2>Login</h2>
-        <form action="#" method="post">
+        <form action="index2.html" method="post">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
-
+            <a href="cadastro.html">Cadastrar-se</a>
+            <br>
+            <br>
             <label for="senha">Senha:</label>
             <input type="password" id="senha" name="senha" required>
 
             <div class="center">
-                <input type="submit" value="Entrar">
+                <a type="submit" href="index2.html">Entrar</a>
             </div>
-            <a href="cadastro.html">Teste</a>
+            <a href="">Esqueceu sua senha?</a>
         </form>
     </div>
 </body>
