--- a/minhaconta.html
+++ b/minhaconta.html
@@ -47,10 +47,10 @@
   <nav>
     <ul class="menu">
       <li class="logo"><img class="logopag " src="./logo/logo.png" alt="Logo da Sua Empresa"><a href="#"></a></li>
-      <li class="item"><a href="index.html">Home</a></li>
-      <li class="item"><a href="catalago.html">Catalago</a></li>
-      <li class="item"><a href="orcamento.html">Orçamento</a></li>
-      <li class="item"><a href="anuncio.html">Minha Conta</a></li>
+      <li class="item"><a href="index2.html">Home</a></li>
+      <li class="item"><a href="catalago2.html">Catalago</a></li>
+      <li class="item"><a href="orcamento2.html">Orçamento</a></li>
+      <li class="item"><a href="minhaconta.html">Minha Conta</a></li>
       <li class="item button secondary"><a href="index.html">Sair</a></li>
       <li class="toggle"><span class="bars"></span></li>
     </ul>
