--- a/orcamento2.html
+++ b/orcamento2.html
@@ -46,11 +46,12 @@
 <body>
   <nav>
     <ul class="menu">
-      <li class="logo"><img class="logopag " src="./logo/logo.png" href="index.html" alt="Logo da Sua Empresa"><a href="index.html"></a></li>
+      <li class="logo"><img class="logopag " src="./logo/logo.png" alt="Logo da Sua Empresa"><a href="#"></a></li>
       <li class="item"><a href="index.html">Home</a></li>
-      <li class="item"><a href="catalago.html">Catalago</a></li>
+      <li class="item"><a href="catalogo2.html">Catalago</a></li>
       <li class="item"><a href="orcamento.html">Orçamento</a></li>
-      <li class="item button secondary"><a href="login.html">Login</a></li>
+      <li class="item"><a href="anuncio.html">Minha Conta</a></li>
+      <li class="item button secondary"><a href="index.html">Sair</a></li>
       <li class="toggle"><span class="bars"></span></li>
     </ul>
     </nav>
