--- a/Detalhes2.html
+++ b/Detalhes2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,51 +8,70 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="text/javascript" src="script.js"></script>
     <title>Marcos Refrigeração</title>
-    <script
-    src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
-    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
     <script>
-    $(function() {
-    $(".toggle").on("click", function() {
-        if ($(".item").hasClass("active")) {
-            $(".item").removeClass("active");
-        } else {
-            $(".item").addClass("active");
-        }
-    });
-});
+        $(function () {
+            $(".toggle").on("click", function () {
+                if ($(".item").hasClass("active")) {
+                    $(".item").removeClass("active");
+                } else {
+                    $(".item").addClass("active");
+                }
+            });
+        });
+
     </script>
 </head>
+
 <body>
     <nav>
-    <ul class="menu">
-        <li class="logo"><img class="logopag " src="./logo/logo.png" alt="Logo da Sua Empresa"><a href="#"></a></li>
-        <li class="item"><a href="index2.html">Home</a></li>
-        <li class="item"><a href="catalago2.html">Catalago</a></li>
-        <li class="item"><a href="orcamento2.html">Orçamento</a></li>
-        <li class="item"><a href="minhaconta.html">Minha Conta</a></li>
-        <li class="item button secondary"><a href="index.html">Sair</a></li>
-        <li class="toggle"><span class="bars"></span></li>
-    </ul>
+        <ul class="menu">
+            <li class="logo"><img class="logopag " src="./logo/logo.png" alt="Logo da Sua Empresa"><a href="#"></a></li>
+            <li class="item"><a href="index2.html">Home</a></li>
+            <li class="item"><a href="catalago2.html">Catalago</a></li>
+            <li class="item"><a href="orcamento2.html">Orçamento</a></li>
+            <li class="item"><a href="minhaconta.html">Minha Conta</a></li>
+            <li class="item button secondary"><a href="index.html">Sair</a></li>
+            <li class="toggle"><span class="bars"></span></li>
+        </ul>
     </nav>
-        <div class="container">
-            <div class="campo campo-esquerda">
-                <img class="carfoto"  src="./fotoproduto/produto3.jpg">
-                <h2> Compacto e funcional</h2>
-                    <h6>Com medidas externas de 50 cm de largura, 55 cm de profundidade e 88 cm de altura, o Freezer 50 Litros é uma opção compacta que se adequa a espaços limitados.</h6>
-  
-            </div>
-            <div class="campo campo-direita">
-                <!-- Conteúdo do campo direita -->
-                <form>
-                    <P>Informações Para contato</P>
-                    <p>Nome:</p>
-                    <p>Estado e Cidade:</p>
-                    <p>Telefone:</p>
-                    <a href="" class="botaocompra" style="font-size: 22px;display: inline-block; background-color:green">COMPRAR</a>
-                </form>
-            </div>
+    <div class="container">
+        <div class="campo campo-esquerda">
+            <img class="carfoto" src="./fotoproduto/produto3.jpg">
+            <h2 class="h2det">Compacto e funcional</h2>
+            <h6 class="h6det">Com medidas externas de 50 cm de largura, 55 cm de profundidade e 88 cm de altura, o
+                Freezer 50 Litros é uma opção compacta que se adequa a espaços limitados.</h6>
         </div>
+        <div class="campo campo-direita">
+            <!-- Conteúdo do campo direita -->
+            <form>
+                <P>Informações Para contato</P>
+                <p>Nome:</p>
+                <p>Estado e Cidade:</p>
+                <p>Telefone:</p>
+                <!-- Botão "Finalizar Compra" -->
+                <button type="button" onclick="mostrarSubtela()" class="botaocompra"
+                    style="font-size: 22px; display: inline-block; background-color: green;">Finalizar Compra</button>
+
+                <!-- Div da subtela de checkout -->
+                <div class="subtela" id="minhaSubtela">
+                    <div class="subtela-conteudo">
+                        <h2 class="h2det">Instruções de Pagamento via Pix</h2>
+                        <p>Use a câmera do seu aplicativo bancário para escanear o QR Code abaixo:</p>
+                        <img src="qrcode.jpg" id="qr-code" alt="QR Code Pix" onclick="openModal('qrcode.jpg')">
+                        <p>PIX Copia e Cola</p>
+                        <input type="text" value="324151020108@wbankcentral.com" readonly="readonly" id="meuCampo">
+                        <button onclick="copiarTexto()">Copiar</button>
+                        <br>
+                        <br>
+                        <p>Após efetuar o pagamento, clique no botão abaixo para confirmar:</p>
+                        <button type="button" onclick="confirmarPagamento()">Confirmar Pagamento</button>
+                        <button type="button" onclick="fecharSubtela()">Fechar</button>
+                    </div>
+                </div>
+        </div>
+    </div>
 </body>
+
 </html>
