--- a/catalago.html
+++ b/catalago.html
@@ -82,7 +82,7 @@
         <p><b>R$ 3.505,50</b> no PIX</p>
         <!-- Quantidade no Cartão-->
         <p>6x de R$ 615,00 no cartão s/ juros</p><br>
-        <a href="Detalhes.html" class="botao">Mais Informações</a>
+        <a href="Detalhes2.html" class="botao">Mais Informações</a>
       </article>
 
       <article class="product">
@@ -93,7 +93,7 @@
         <p><b>R$ 3.448,50</b> no PIX</p>
         <!-- Quantidade no Cartão-->
         <p>6x de R$ 605,00 no cartão s/ juros</p><br>
-        <a href="Detalhes.html" class="botao">Mais Informações</a>
+        <a href="Detalhes2.html" class="botao">Mais Informações</a>
       </article>
 
       <article class="product">
@@ -104,7 +104,7 @@
         <p><b>R$ 3.790,50</b> no PIX</p>
         <!-- Quantidade no Cartão-->
         <p>6x de R$ 665,00 no cartão s/ juros</p><br>
-        <a href="Detalhes.html" class="botao">Mais Informações</a>
+        <a href="Detalhes2.html" class="botao">Mais Informações</a>
       </article>
 
       <article class="product">
@@ -115,7 +115,7 @@
         <p><b>R$ 5.035,50</b> no PIX</p>
         <!-- Quantidade no Cartão-->
         <p>6x de R$ 883,33 no cartão s/ juros</p><br>
-        <a href="Detalhes.html" class="botao">Mais Informações</a>
+        <a href="Detalhes2.html" class="botao">Mais Informações</a>
       </article>
 
       <article class="product">
@@ -126,7 +126,7 @@
         <p><b>R$ 893,00</b> no PIX</p>
         <!-- Quantidade no Cartão-->
         <p>6x de R$ 235,00 no cartão s/ juros</p><br>
-        <a href="Detalhes.html" class="botao">Mais Informações</a>
+        <a href="Detalhes2.html" class="botao">Mais Informações</a>
       </article>
 
       <article class="product">
@@ -137,7 +137,7 @@
         <p><b>R$ 3.505,50</b> no PIX</p>
         <!-- Quantidade no Cartão-->
         <p>6x de R$ 615,00 no cartão s/ juros</p><br>
-        <a href="Detalhes.html" class="botao">Mais Informações</a>
+        <a href="Detalhes2.html" class="botao">Mais Informações</a>
       </article>
 
       </article>
