--- a/cadastro.html
+++ b/cadastro.html
@@ -42,7 +42,7 @@
             <input type="number" id="cep" name="cep"><br>
 
             <input type="submit" value="Cadastrar" onclick="copiarTexto()">
-            <a href="login.html">Voltar</a>
+            <a href="login.html" style="text-align: right;">Voltar</a>
             <button type="submit">Cadastrar Conta</button>
         </form>
     </div>
