--- a/cadastro.html
+++ b/cadastro.html
@@ -41,8 +41,9 @@
             <label for="cep">CEP</label>
             <input type="number" id="cep" name="cep"><br>
 
-            <input type="submit" value="Cadastrar" onclick="copiarTexto()">
+            <input type="submit" value="Cadastrar" onclick="copiarTexto()"> <div style="text-align: right;">
             <a href="login.html" style="text-align:right;">Voltar</a>
+                <div>
            <!-- <button type="submit">Cadastrar Conta</button> -->
         </form>
     </div>
