--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
             <input type="password" id="senha" name="senha" required>
 
             <div class="center">
-                <a type="submit" href="index2.html" style="background-color:#007BFF;color: #fff;padding: 10px 20px;border: none;border-radius: 4px;cursor: pointer;display: inline-block;" >Entrar</a>
+                <a type="submit" href="index2.html" style="background-color:#007BFF;color: #fff;padding: 10px 20px;border: none;border-radius: 4px;cursor: pointer;display:text-decoration:none; inline-block;" >Entrar</a>
             </div>
             <a href="">Esqueceu sua senha?</a>
         </form>
