--- a/cadastro.html
+++ b/cadastro.html
@@ -21,7 +21,7 @@
 </script>
 <body>
     <div class="container">
-        <h2>Casdastro</h2>
+        <h2>Cadastro</h2>
         <form href="index2.html" method="post">
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" required>
