--- a/catalogo2.html
+++ b/catalogo2.html
@@ -51,7 +51,7 @@
     <ul class="menu">
       <li class="logo"><img class="logopag " src="./logo/logo.png" alt="Logo da Sua Empresa"><a href="#"></a></li>
       <li class="item"><a href="index2.html">Home</a></li>
-      <li class="item"><a href="catalago2.html">Catalago</a></li>
+      <li class="item"><a href="catalogo2.html">Catalago</a></li>
       <li class="item"><a href="orcamento2.html">Orçamento</a></li>
       <li class="item"><a href="minhaconta.html">Minha Conta</a></li>
       <li class="item button secondary"><a href="index.html">Sair</a></li>
