--- a/login.html
+++ b/login.html
@@ -19,8 +19,8 @@
             <input type="password" id="senha" name="senha" required>
             <a href="">Esqueceu sua senha?</a>
             <div class="center">
+                <input type="submit" value="Login" onclick="copiarTexto()" style="background-color:#007BFF; color: #fff;padding: 10px 20px;border: none;border-radius: 4px;cursor: pointer:display; text-decoration:none; inline-block;">
                 <br>
-                <a type="submit" href="index2.html" style="background-color:#007BFF;color: #fff;padding: 10px 20px;border: none;border-radius: 4px;cursor: pointer;display:text-decoration:none; inline-block;" >Entrar</a>
             </div>
         </form>
     </div>
