--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h2>Login</h2>
-        <form href="index2.html" method="post" style="texto-decoration:none;">
+        <form href="index2.html" action="post" style="texto-decoration:none;">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
             <a href="cadastro.html">Cadastrar-se</a>
