--- a/Detalhes.html
+++ b/Detalhes.html
@@ -41,7 +41,7 @@
                     <h6>Com medidas externas de 50 cm de largura, 55 cm de profundidade e 88 cm de altura, o Freezer 50 Litros é uma opção compacta que se adequa a espaços limitados.</h6>
   
             </div>
-            <div class="campo campo-direita">
+            <div class="campo">
                 <!-- Conteúdo do campo direita -->
                 <form>
                     <P>Informações Para contato</P>
