--- a/Detalhes.html
+++ b/Detalhes.html
@@ -48,7 +48,9 @@
                     <p>Nome:</p>
                     <p>Estado e Cidade:</p>
                     <p>Telefone:</p>
-                    <a href="" class="botaocompra" style="font-size: 28px;display: inline-block; background-color:green">COMPRAR</a>
+                    <div class="container">
+                        <button class="botao-compra">Comprar Agora</button>
+                    </div>
                 </form>
             </div>
         </div>
