--- a/Detalhes.html
+++ b/Detalhes.html
@@ -48,7 +48,7 @@
                     <p>Nome:</p>
                     <p>Estado e Cidade:</p>
                     <p>Telefone:</p>
-                    <hr>
+                    <hr border="3">
                     <div class="container1">
                         <button class="botao-compra">Comprar Agora</button>
                     </div>
