--- a/Detalhes.html
+++ b/Detalhes.html
@@ -63,7 +63,7 @@
                     <hr border="3">
                     <br>
                     <div class="container1">
-                        <button class="botao-compra">Comprar Agora</button>
+                        <button class="botao-compra" href="pagamento.html">Comprar Agora</button>
                     </div>
                 </form>
             </div>
