--- a/Detalhes.html
+++ b/Detalhes.html
@@ -63,7 +63,7 @@
                     <br>
                     <H1 class="h2det">R$ 654.321</H1>
                     <div class="container1">
-                        <button class="botao-compra" href="pagamento.html">Comprar Agora</button>
+                        <a class="botao-compra" href="pagamento.html">Comprar Agora</a>
                     </div>
                 </form>
             </div>
