--- a/Detalhes2.html
+++ b/Detalhes2.html
@@ -59,55 +59,37 @@
     </nav>
     <div class="container">
         <div class="campo campo-esquerda">
-            <img class="carfoto" src="./fotoproduto/produto3.jpg">
-            <h2 class="h2det">Compacto e funcional</h2>
-            <h6 class="h6det">Com medidas externas de 50 cm de largura, 55 cm de profundidade e 88 cm de altura, o
-                Freezer 50 Litros é uma opção compacta que se adequa a espaços limitados.</h6>
+            <img class="carfoto"  src="./fotoproduto/produto3.jpg">
+            <h2> Compacto e funcional</h2>
+                <h6>Com medidas externas de 50 cm de largura, 55 cm de profundidade e 88 cm de altura, o Freezer 50 Litros é uma opção compacta que se adequa a espaços limitados.</h6>
+
         </div>
-        <div class="campo campo-direita">
+        <div class="campo">
             <!-- Conteúdo do campo direita -->
             <form>
-                <H1 style="font-size: 55px;">Frigorbar 120L 12/24v Bivolt</H1>
-                <p style="font-size: 33px;"></p>
-                <p style="font-size: 33px;">Marca:Junges</p>
-                <label style="font-size: 33px;">Dispinível na Cor:</label>
+                <H1 style="font-size: 50px;">Frigorbar 120L 12/24v Bivolt</H1>
+                <p style="font-size: 30px;"></p>
+                <p style="font-size: 30px;">Marca: Junges</p>
+                <label style="font-size: 30px;">Dispinível na Cor:</label>
                 <select name="cor" id="cor">
                     <option>Branco</option>
                 </select>
                 <br>
                 <!--Forma de PAGAMENTO PIX-->
-                <label style="font-size: 33px;">Forma de Pagamento:</label>
+                <label style="font-size: 30px;">Forma de Pagamento:</label>
                 <select name="pay" id="pay">
                     <option>Pix</option>
                 </select>
                   <!-- Campo para o valor do frete -->
-            <p style="font-size: 45px;">O valor do frete para sua região será:</p>
+            <p style="font-size: 30px;">O valor do frete para sua região será:</p>
+                <hr border="3">
+                <br>
                 <H1 class="h2det">R$ 654.321</H1>
-                <!-- Botão "Finalizar Compra" -->
-                <button type="button" onclick="mostrarSubtelaComLoading()" class="botaocompra"
-                style="font-size: 22px; display: inline-block; background-color: green;">Finalizar Compra</button>
-                <!-- Div da subtela de checkout -->
-                <div class="subtela" id="minhaSubtela">
-                    <div class="subtela-conteudo">
-                        <h2 class="h2det">Instruções de Pagamento via Pix</h2>
-                        <p>Use a câmera do seu aplicativo bancário para escanear o QR Code abaixo:</p>
-                        <img src="qrcode.jpg" id="qr-code" alt="QR Code Pix" onclick="openModal('qrcode.jpg')">
-                        <p>PIX Copia e Cola</p>
-                        <input type="text" value="324151020108@wbankcentral.com" readonly="readonly" id="meuCampo">
-                        <button onclick="copiarTexto()">Copiar</button>
-                        <br>
-                        <br>
-                        <p>Após efetuar o pagamento, clique no botão abaixo para confirmar:</p>
-                        <button type="button" onclick="confirmarPagamento()">Confirmar Pagamento</button>
-                        <button type="button" onclick="fecharSubtela()">Fechar</button>
-                    </div>
-                    <div class="loading" id="loading" style="display: none;">
-                        <div class="loader"></div> <!-- Adicione um elemento loader aqui -->
-                    </div>
+                <div class="container1">
+                    <a class="botao-compra" href="pagamento.html">Comprar Agora</a>
                 </div>
+            </form>
         </div>
-
     </div>
 </body>
-
 </html>
