--- a/cadastro.html
+++ b/cadastro.html
@@ -6,44 +6,30 @@
     <link rel="stylesheet" href="formulario.css">
     <title>Formulário de Cadastro</title>
 </head>
-<script>
-    function copiarTexto() {
-  var campoTexto = document.getElementById("meuCampo");
-  campoTexto.select();
-
-  try {
-      navigator.clipboard.writeText(campoTexto.value);
-      alert("Texto copiado: " + campoTexto.value);
-  } catch (err) {
-      console.error("Erro ao copiar o texto: ", err);
-  }
-}
-</script>
 <body>
     <div class="container">
         <h2>Cadastro</h2>
-        <form href="index2.html" method="post">
+        <form method="post" action="cadastro.php">
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" required>
-
+            <br>
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
-
+            <br>
             <label for="senha">Senha:</label>
             <input type="password" id="senha" name="senha" required>
-
+            <br>
             <label for="endereco">Endereço</label>
             <input type="text" id="endereco" name="endereco">
-
+            <br>
             <label for="bairro">Bairro</label>
             <input type="text" id="bairro" name="bairro">
-            
+            <br>
             <label for="cep">CEP</label>
             <input type="number" id="cep" name="cep"><br>
-
-            <input type="submit" value="Cadastrar" onclick="copiarTexto()"> <div style="text-align: right;">
+            <br>
+            <input type="submit" value="Cadastrar" id="cadastrar" name="cadastrar"><div style="text-align: right;">
             <a href="login.html" style="text-align:right;">Voltar</a>
-                <div>
            <!-- <button type="submit">Cadastrar Conta</button> -->
         </form>
     </div>
