--- a/pagamento.html
+++ b/pagamento.html
@@ -60,7 +60,7 @@
         <h2>Instruções de Pagamento via Pix</h2>
         <p>Use a câmera do seu aplicativo bancário para escanear o QR Code abaixo:</p>
         <br>
-        <img src="./imagem/qrcode.jpg" id="qr-code" alt="QR Code Pix" onclick="openModal('qrcode.jpg')"><br>
+        <img src="./imagem/qrcode.jpg" id="qr-code" alt="QR Code Pix" onclick="openModal('qrcode.jpg')" style="  display:flexblock;"><br>
         <p>PIX Copia e Cola</p>
         <input style="height: 22px;" type="text" value="Chavepixdavenda" readonly="readonly" id="meuCampo">
         <button type="button" onclick="confirmarPagamento()">Copiar</button>
