--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
             <br>
             <label for="senha">Senha:</label>
             <input type="password" id="senha" name="senha" required>
-            <a href="">Esqueceu sua senha?</a>
+            <a href="senha.html">Esqueceu sua senha?</a>
             <div class="center">
                 <input type="submit" value="Login" style="background-color:#007BFF; color: #fff; padding: 10px 20px; border: none; border-radius: 4px; cursor: pointer;">
                 <br>
