--- a/pagamento.html
+++ b/pagamento.html
@@ -62,10 +62,9 @@
         <br>
         <img src="./imagem/qrcode.jpg" id="qr-code" alt="QR Code Pix" onclick="openModal('qrcode.jpg')" style="  display:flexblock;"><br>
         <p>PIX Copia e Cola</p>
-        <input style="height: 22px;" type="text" value="Chavepixdavenda" readonly="readonly" id="meuCampo">
-        <button type="button" onclick="confirmarPagamento()">Copiar</button>
+        <input style="height: 22px;color:black;" type="text" value="Chavepixdavenda" readonly="readonly" id="meuCampo">
+        <button type="button" onclick="confirmarPagamento()" style="background-color: blue;">Copiar</button>
         <p>Após efetuar oa pagamento, clique no botão abaixo para confirmar:</p>
-        <button type="button" onclick="confirmarPagamento()
-        ">Confirmar Pagamento</button>
+        <button type="button" onclick="confirmarPagamento()" style="background-color: blue;">Confirmar Pagamento</button>
 </body>
 </html>
