--- a/pagamento.html
+++ b/pagamento.html
@@ -57,7 +57,7 @@
 
             try {
                 navigator.clipboard.writeText(campoTexto.value);
-                alert("Pagamento Confirmado, Aguarde orientações via E-mail");
+                alert("Pagamento Confirmado, Aguarde orientações via E-mail!!!");
                 
                 // Redirecionar para index.php após a cópia do texto
                 window.location.href = "index.php";
