--- a/Detalhes.html
+++ b/Detalhes.html
@@ -77,7 +77,7 @@
                     <br>
                     <H1 class="h2det">R$ 654,32</H1>
                     <div class="container1">
-                        <button  class="botao-compra" type="button" onclick="compraragora()">Copiar</button>
+                        <button  class="botao-compra" type="button" onclick="compraragora()">Efetuar compra</button>
                     </div>
                 </form>
             </div>
