--- a/cadastro.html
+++ b/cadastro.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <h2>Cadastro</h2>
-        <form method="post" action="cadastro.php">
-            <label for="nome">Nome:</label>
+        <form action="cadastro.php" method="post" >
+            <label for="nome">Nome Completo:</label>
             <input type="text" id="nome" name="nome" required>
             <br>
             <label for="email">Email:</label>
