--- a/pagamento.html
+++ b/pagamento.html
@@ -60,7 +60,7 @@
                 alert("Pagamento Confirmado, Aguarde orientações via E-mail!!!");
                 
                 // Redirecionar para index.php após a cópia do texto
-                window.location.href = "index.php";
+                window.location.href = "index2.php";
             } catch (err) {
                 console.error("Erro ao realizar o pagamento.", err);
             }
