--- a/senha.html
+++ b/senha.html
@@ -9,28 +9,26 @@
 <body>
     <div class="container">
         <h2>Redefinir Senha</h2>
-        <form action="" method="post" id="redefinirSenhaForm">
+        <form action="javascript:void(0);" method="post" id="redefinirSenhaForm">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
-            <a href="login.html" id="esqueceuSenhaLink">Voltar</a>
+            <a href="login.html" >Voltar</a>
             <br>
             <div class="center">
-                <input type="submit" id="submitBtn" value="Redefinir Senha" style="background-color:#007BFF; color: #fff; padding: 10px 20px; border: none; border-radius: 4px; cursor: pointer;">
+                <input type="submit" id="submitBtn" value="Redefinir Senha" id="esqueceuSenhaLink" style="background-color:#007BFF; color: #fff; padding: 10px 20px; border: none; border-radius: 4px; cursor: pointer;">
                 <br>
             </div>
         </form>
     </div>
 </body>
 <script>
-
-    // Seleciona o link pelo ID e adiciona um evento de clique
-    document.getElementById('esqueceuSenhaLink').addEventListener('click', function() {
-        // Exibe um alerta quando o link é clicado
-        alert('Enviado link viu E-mail para redefinir sua senha.');
-        window.location.href = 'login.html'; // Redireciona para a página "login.html" após o alerta
+    // Seleciona o formulário pelo ID e adiciona um evento de envio
+    document.getElementById('redefinirSenhaForm').addEventListener('submit', function(event) {
+        event.preventDefault(); // Impede o envio padrão do formulário
+        // Exibe um alerta quando o botão "Redefinir Senha" é clicado
+        alert('Link para redefinição de senha enviado por e-mail.');
+        // Redireciona para a página "login.php"
+        window.location.href = 'login.html';
     });
-</script>
-</html>
-
 </script>
 </html>
