--- a/Detalhes.html
+++ b/Detalhes.html
@@ -65,10 +65,10 @@
                         <option>Pix</option>
                     </select>
                       <!-- Campo para o valor do frete -->
-                <p style="font-size: 30px;">O valor do frete para sua região será:</p>
+                <p style="font-size: 30px;">O valor do frete para sua região será: R$119,99</p>
                     <hr border="3">
                     <br>
-                    <H1 class="h2det">R$ 654.321</H1>
+                    <H1 class="h2det">R$ 654.32</H1>
                     <div class="container1">
                         <a class="botao-compra" id="submitBtn" value="Redefinir Senha" id="esqueceuSenhaLink" >Comprar Agora</a>
                     </div>
