--- a/Detalhes.html
+++ b/Detalhes.html
@@ -70,7 +70,8 @@
                     <br>
                     <H1 class="h2det">R$ 654.32</H1>
                     <div class="container1">
-                        <a class="botao-compra" id="submitBtn" value="Redefinir Senha" id="esqueceuSenhaLink" >Comprar Agora</a>
+                        <a class="botao-compra" id="submitBtn" value="Redefinir Senha" id="esqueceuSenhaLink">Comprar Agora</a>
+                           <input type="submit" id="submitBtn" value="Comprar" id="esqueceuSenhaLink">
                     </div>
                 </form>
             </div>
