--- a/catalogo2.html
+++ b/catalogo2.html
@@ -50,10 +50,10 @@
   <nav>
     <ul class="menu">
       <li class="logo"><img class="logopag " src="./logo/logo.png" alt="Logo da Sua Empresa"><a href="#"></a></li>
-      <li class="item"><a href="index2.html">Home</a></li>
-      <li class="item"><a href="catalogo2.html">Catalago</a></li>
-      <li class="item"><a href="orcamento2.html">Orçamento</a></li>
-      <li class="item"><a href="minhaconta.html">Minha Conta</a></li>
+      <li class="item"><a href="index2.php">Home</a></li>
+      <li class="item"><a href="catalogo2.php">Catalago</a></li>
+      <li class="item"><a href="orcamento2.php">Orçamento</a></li>
+      <li class="item"><a href="minhaconta.php">Minha Conta</a></li>
       <li class="item button secondary"><a href="index.html">Sair</a></li>
       <li class="toggle"><span class="bars"></span></li>
     </ul>
@@ -83,9 +83,7 @@
         <h2>Frigorbar 120L 12/24v</h2>
         <!-- Valor -->
         <p><b>R$ 3.505,50</b> no PIX</p>
-        <!-- Quantidade no Cartão-->
-        <p>6x de R$ 615,00 no cartão s/ juros</p><br>
-        <a href="Detalhes.html" class="botao">Mais Informações</a>
+        <a href="Detalhesproduto1.html" class="botao">Mais Informações</a>
       </article>
 
       <article class="product">
@@ -94,9 +92,7 @@
         <h2>Frigorbar 80L 12/24v</h2>
         <!-- Valor -->
         <p><b>R$ 3.448,50</b> no PIX</p>
-        <!-- Quantidade no Cartão-->
-        <p>6x de R$ 605,00 no cartão s/ juros</p><br>
-        <a href="Detalhes.html" class="botao">Mais Informações</a>
+        <a href="detalhesproduto2.html" class="botao">Mais Informações</a>
       </article>
 
       <article class="product">
@@ -105,9 +101,7 @@
         <h2>Frigobar Duplex 88L 12/24v</h2>
         <!-- Valor -->
         <p><b>R$ 3.790,50</b> no PIX</p>
-        <!-- Quantidade no Cartão-->
-        <p>6x de R$ 665,00 no cartão s/ juros</p><br>
-        <a href="Detalhes.html" class="botao">Mais Informações</a>
+        <a href="detalhesproduto3.html" class="botao">Mais Informações</a>
       </article>
 
       <article class="product">
@@ -116,9 +110,7 @@
         <h2>Refrigerador Duplex 260L 12/24v</h2>
         <!-- Valor -->
         <p><b>R$ 5.035,50</b> no PIX</p>
-        <!-- Quantidade no Cartão-->
-        <p>6x de R$ 883,33 no cartão s/ juros</p><br>
-        <a href="Detalhes.html" class="botao">Mais Informações</a>
+        <a href="detalhesproduto4.html" class="botao">Mais Informações</a>
       </article>
 
       <article class="product">
@@ -126,25 +118,19 @@
         <!-- Titulo -->
         <h2>Caixa Térmica 90L</h2>
         <!-- Valor -->
-        <p><b>R$ 893,00</b> no PIX</p>
-        <!-- Quantidade no Cartão-->
-        <p>6x de R$ 235,00 no cartão s/ juros</p><br>
-        <a href="Detalhes.html" class="botao">Mais Informações</a>
+        <p><b>R$ 585,00</b> no PIX</p>
+        <a href="detalhesproduto5.html" class="botao">Mais Informações</a>
       </article>
 
       <article class="product">
         <img src="./fotoproduto/produto6.jpg" alt="frio06">
         <!-- Titulo -->
-        <h2>Freezer 300 Litros com Tampa 12/2</h2>
+        <h2>Freezer 300 Litros Tampa Cega 12/24v</h2>
         <!-- Valor -->
         <p><b>R$ 3.505,50</b> no PIX</p>
-        <!-- Quantidade no Cartão-->
-        <p>6x de R$ 615,00 no cartão s/ juros</p><br>
-        <a href="Detalhes.html" class="botao">Mais Informações</a>
+        <a href="detalhesproduto6.html" class="botao">Mais Informações</a>
       </article>
-
-      </article>
-    </section>'
+    </section>
   </div>
 </body>
 
